# lumos-ai

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: api.md  development.md  getting-started.md  index.md
docs/recipes/: data-pipeline-monitoring.md  feature-importance.md  full-pima-walkthrough.md  mlflow-layout.md  monitoring-bundle.md  ongoing-monitoring-pipeline.md  performance-drift.md  pipeline-patterns.md  representative-samples.md  training-pipeline-reporting.md  tuning-and-final-training.md
docs/superpowers/plans/: 2026-06-13-lumosai-implementation.md  2026-06-14-lumosai-classification-calibration.md  2026-06-14-lumosai-monitoring-bundles.md  2026-06-14-lumosai-v0.2-implementation.md  2026-06-14-report-kwargs-mkdocs.md  2026-06-15-importance-aware-drift.md  2026-06-16-performance-drift.md  2026-06-16-pima-notebook-monitoring-capabilities.md  2026-06-17-notebook-report-display.md  (+5 more)
examples/data/: README.md
examples/notebooks/: pima_diabetes_walkthrough.ipynb
src/lumosai/: __init__.py  artifacts.py  bundles.py  exceptions.py  mlflow.py  notebook.py  results.py  schema.py  settings.py
tests/: test_artifacts.py  test_bundles.py  test_mlflow.py  test_notebook.py  test_public_api.py  test_results.py  test_schema.py  test_settings.py
tests/data/: test_drift.py  test_ingest.py  test_profiling.py  test_sampling.py  test_validation.py
tests/model/: test_bias.py  test_calibration.py  test_importance.py  test_lift.py  test_metrics.py  test_performance.py  test_performance_drift.py  test_scores.py
(+26 files in other folders)
